--- a/column-gs.css
+++ b/column-gs.css
@@ -18,7 +18,6 @@ p { margin-bottom: 25px; line-height: 1.4em; }
 *::selection { background: #722872; color: #fff; }
 *::-moz-selection { background: #722872; color: #fff; }
 
-.content { margin: 0 auto; }
 .fleft { float: left; }
 .fright { float: right; }
 .clear { clear: both; }
@@ -28,6 +27,8 @@ p { margin-bottom: 25px; line-height: 1.4em; }
 .hidden-text { overflow: hidden; text-indent: 100%; white-space: nowrap; }
 .is-hidden { display: none; }
 
+.overflow { overflow: hidden; }
+
 /* grid */
 .column-full { width: 940px; }
 .column-eleven-twelfths { width: 860px; }
@@ -35,18 +36,34 @@ p { margin-bottom: 25px; line-height: 1.4em; }
 .column-three-quarters { width: 700px; }
 .column-two-thirds { width: 620px; }
 .column-seven-twelfths { width: 540px; }
-.column-half { width: 460px; }
+.column-half { width: 460px; margin-right: 20px; }
 .column-five-twelfths { width: 380px; }
 .column-two-fifths { width: 364px; }
-.column-third { width: 300px; }
-.column-quarter { width: 220px; }
-.column-fifth { width: 172px; }
-.column-sixth { width: 140px; }
-.column-one-twelfths { width: 60px; }
+.column-third { width: 300px; margin-right: 20px; }
+.column-quarter { width: 220px; margin-right: 20px; }
+.column-fifth { width: 172px; margin-right: 20px; }
+.column-sixth { width: 140px; margin-right: 20px; }
+.column-one-twelfths { width: 60px; margin-right: 20px; }
 
 .space-left { margin-left: 20px; }
 .space-right { margin-right: 20px; }
+.space-right-small {margin-right: 10px;}
 
+.space-bottom-small {margin-bottom:10px}
+.space-bottom { margin-bottom: 20px; }
+.space-bottom-big { margin-bottom: 40px; }
+
+    .column-half:nth-child(2n),
+    .column-half.fright,
+    .column-third:nth-child(3n),
+    .column-quarter:nth-child(4n),
+    .column-fifth:nth-child(5n),
+    .column-sixth:nth-child(6n),
+    .column-one-twelfths:nth-child(12n),
+    .no-right { margin-right: 0; }
+
+
+.content { margin: 0 auto; }
 
 
 /* responsivo */
