--- a/column-gs.css
+++ b/column-gs.css
@@ -1,4 +1,3 @@
-
 .fleft { float: left; }
 .fright { float: right; }
 .clear { clear: both; }
@@ -49,14 +48,15 @@
 .column-third .column-sixth:nth-child(2n) { margin-right: 0; }
 
 
+
 .content { margin: 0 auto; }
 
 
-.space-bottom-small {margin-bottom:10px}
-.space-bottom { margin-bottom: 20px; }
-.space-bottom-big { margin-bottom: 40px; }
+.space-bottom-small { margin-bottom:10px !important; }
+.space-bottom { margin-bottom: 20px !important; }
+.space-bottom-big { margin-bottom: 40px !important; }
 
-@media only screen and (max-width: 960px){
+@media only screen and (max-width: 960px) {
     .column-full { width: auto; padding: 0 20px; }
     .column-full .column-full { padding: 0; }
 
@@ -75,13 +75,23 @@
     .space-right { margin-right: 5%; }
     .space-left { margin-left: 5%; }
     img { max-width: 100% !important; height: auto !important; }
+
+
+    .column-two-thirds .column-third { width: 47%; clear: none; }
+        .column-two-thirds .column-third.fleft { float: left; }
+        .column-two-thirds .column-third.fright { float: right; }
+
+    .column-third .column-third,
+    .column-half .column-half { width: 100%; }
+    .column-half .column-sixth { width: 33%; margin-right: 0; }
+    .column-third .column-sixth { width: 50%; margin-right: 0; }
 }
-@media only screen and (max-width: 740px){
+@media only screen and (max-width: 740px) {
     .column-three-quarters { width: 100%; float: none; }
     .space-bottom { margin-bottom: 10px; }
     .space-bottom-big { margin-bottom: 25px; }
 }
-@media only screen and (max-width: 660px){
+@media only screen and (max-width: 660px) {
     .column-two-thirds { width: 100%; float: none; }
     .column-third { width: auto; float: none; margin-left: auto; margin-right: auto; clear: both; }
     .column-quarter { width: 50%; margin-right: 0; }
@@ -90,9 +100,11 @@
     .column-one-twelfths { width: 30% }
     .column-full .column-one-twelfths:nth-child(3n) { margin-right: 0; }
 }
-@media only screen and (max-width: 480px){
+@media only screen and (max-width: 480px) {
+    .column-half { width: auto; float: none; }
+    .column-two-thirds .column-third { width: auto; }
     .column-full { padding: 0 3%; }
 }
-@media only screen and (max-width: 320px){
-    .column-half { width: auto; float: none; }
+@media only screen and (max-width: 320px) {
+
 }
