--- a/column-gs.css
+++ b/column-gs.css
@@ -6,13 +6,22 @@
 .fright { float: right }
 .clear { clear: both }
 
-.cf:before, .cf:after {
-    content: " ";
-    display: table
-}
-.cf:after {clear: both }
+.cf:before, .cf:after { content: " "; display: table }
+.cf:after { clear: both }
 
-.column-full { max-width: 1170px; }
+[class*="column-"] {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+        -ms-box-sizing: border-box;
+         -o-box-sizing: border-box;
+            box-sizing: border-box;
+            *behavior: url('/css/boxsizing.htc');
+    float: left;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.column-full { max-width: 1170px; float: none; }
 .column-eleven-twelfths { width: 91.6667%; }
 .column-ten-twelfths { width: 83.3334%; }
 .column-three-quarters { width: 75%; }
@@ -32,17 +41,7 @@
 .space-bottom { margin-bottom: 20px }
 .space-bottom-small { margin-bottom: 10px }
 
-[class^="column-"] {
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-        -ms-box-sizing: border-box;
-         -o-box-sizing: border-box;
-            box-sizing: border-box;
-            *behavior: url('/css/boxsizing.htc');
-    float: left;
-    padding-left: 15px;
-    padding-right: 15px;
-}
+
 [class*="column-"].content { float: none; max-width: 1170px; padding-left: 0; padding-right: 0; }
 
 .content { margin-left: auto; margin-right: auto; float: none; }
@@ -50,24 +49,32 @@
 .column-half .column-quarter { width: 50%; }
 .column-three-quarters .column-quarter { width: 33.3333%; }
 
+.column-third .column-sixth { width: 50%; }
+.column-third .column-sixth:nth-child(2n+1) { clear: none; }
 
+/**
+* @section Responsive
+* Responsive rules on this file
+*/
 @media only screen and (max-width: 1170px) {
     img { max-width: 100% !important; height: auto !important; }
 
     .column-full { width: auto; }
+    .content { padding-left: 15px; padding-right: 15px; }
+}
+@media only screen and (max-width: 1060px) {
+    [class*="column-"].content { width: 100%; }
+
+    .column-three-quarters { width: 100%; float: none; }
+
+    .column-quarter,
+    .column-three-quarters .column-quarter { width: 50%; }
 }
 @media only screen and (max-width: 960px) {
     .column-fifth { width: 25%; }
     .column-fifth.column-single { margin-left: auto; margin-right: auto; float: none; clear: both; }
 
     .column-twelfth { width: 16.6667%; }
-}
-@media only screen and (max-width: 740px) {
-    [class*="column-"].content { width: 100%; }
-
-    .column-quarter,
-    .column-three-quarters .column-quarter { width: 50%; }
-    .column-quarter:nth-child(2n+1) { clear: both; padding-left: 15px; padding-right: 15px; }
 }
 @media only screen and (max-width: 660px) {
     .column-third:nth-child(n) { clear: both; float: none; padding-left: 15px; padding-right: 15px; width: 100%; }
@@ -86,6 +93,9 @@
 }
 @media only screen and (max-width: 480px) {
     .column-half:nth-child(n) { clear: both; float: none; padding-left: 15px; padding-right: 15px; width: 100%; }
+
+    .column-half .column-quarter,
+    .column-quarter { width: 100%; float: none; clear: both; }
 
     .column-sixth { width: 50%; }
     .column-sixth:nth-child(3n+1) { clear: none; }
