adjusts for column-quarter

--- a/column-gs.css
+++ b/column-gs.css
@@ -2,9 +2,6 @@
 * @section Grid
 * Grid definitions here
 */
-.fleft { float: left }
-.fright { float: right }
-.clear { clear: both }
 
 .cf:before, .cf:after { content: " "; display: table }
 .cf:after { clear: both }
@@ -37,10 +34,14 @@
 .column-sixth { width: 16.6667%; }
 .column-twelfth { width: 8.3333%; }
 
-.space-bottom-big { margin-bottom: 40px }
-.space-bottom { margin-bottom: 20px }
+.space-bottom-big { margin-bottom: 60px }
+.space-bottom { margin-bottom: 40px }
 .space-bottom-small { margin-bottom: 10px }
 
+
+.fleft { float: left }
+.fright { float: right }
+.clear { clear: both }
 
 [class*="column-"].content { float: none; max-width: 1170px; padding-left: 0; padding-right: 0; }
 
@@ -49,9 +50,7 @@
 .column-half .column-quarter { width: 50%; }
 .column-three-quarters .column-quarter { width: 33.3333%; }
 
-.column-third .column-sixth { width: 50%; }
-.column-third .column-sixth:nth-child(2n+1) { clear: none; }
-
+[class*="column-"].column-grid { padding-left: 0; padding-right: 0; }
 /**
 * @section Responsive
 * Responsive rules on this file
@@ -64,13 +63,16 @@
 }
 @media only screen and (max-width: 1060px) {
     [class*="column-"].content { width: 100%; }
-
+    
     .column-three-quarters { width: 100%; float: none; }
 
-    .column-quarter,
-    .column-three-quarters .column-quarter { width: 50%; }
+    .column-half.content { width: 50%; }
 }
 @media only screen and (max-width: 960px) {
+    .column-half.content { width: 100%; }
+    .column-quarter,
+    .column-three-quarters .column-quarter { width: 50%; }
+
     .column-fifth { width: 25%; }
     .column-fifth.column-single { margin-left: auto; margin-right: auto; float: none; clear: both; }
 
@@ -94,12 +96,10 @@
 @media only screen and (max-width: 480px) {
     .column-half:nth-child(n) { clear: both; float: none; padding-left: 15px; padding-right: 15px; width: 100%; }
 
+
+    .column-three-quarters .column-quarter,
     .column-half .column-quarter,
     .column-quarter { width: 100%; float: none; clear: both; }
-
-    .column-sixth { width: 50%; }
-    .column-sixth:nth-child(3n+1) { clear: none; }
-    .column-sixth:nth-child(2n+1) { clear: both; }
 
     .column-twelfth { width: 33.3333%; }
 
