--- a/css/column-gs.css
+++ b/css/column-gs.css
@@ -12,7 +12,7 @@
         -ms-box-sizing: border-box;
          -o-box-sizing: border-box;
             box-sizing: border-box;
-            *behavior: url('/css/boxsizing.htc');
+            *behavior: url('boxsizing.htc');
     float: left;
     padding-left: 15px;
     padding-right: 15px;
